# aion

./: .dockerignore  .env.example  .gitignore  AION_SELF.md  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MAINTENANCE.md  README.md  aion.py  aion_character.py  aion_cli.py  aion_documentation.md  aion_launcher.py  aion_memory.py  aion_permissions.py  aion_prompt.py  aion_providers.py  aion_session.py  aion_status.json  aion_web.py  aion_web_od.py  character.md  config_store.py  create_doc.py  ddgs_test.py  debug.bat  diagnose.bat  docker-compose.yml  mcp_servers.json  onboarding.py  plugin_loader.py  pyproject.toml  requirements.txt  restart.bat  start.bat  start.sh  start_cli.bat  status.bat  (+3 more)
core/: aion_character.py  aion_config.py  aion_permissions.py  aion_progress.py  aion_prompt.py  aion_providers.py
docs/: api.md  configuration.md  messaging.md  plugins.md
hub-repo-template/: manifest.json
hub-repo-template/example_plugin/: plugin.json
plugins/: README.txt  clio_reflection.py  docx_tool.py  gemini_provider.py  image_search.py.disabled  memory_plugin.py  restart_tool.py  smart_patch.py  telegram_bot.py  telegram_sender.py  todo_tools.py
plugins/_backups/: moltbook.py
plugins/alexa_plugin/: README.md  alexa_plugin.py
plugins/anthropic_provider/: anthropic_provider.py
plugins/audio_pipeline/: README.md  audio_pipeline.py
plugins/audio_transcriber/: README.md  audio_transcriber.py
plugins/boot_session/: README.md  boot_session.py
prompts/: rules.md
static/: index - Kopie.html  index.html  index_EN.html  lucide.min.js
static/css/: aion.css
(+68 files in other folders)
