[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "1.0.0"
description = "AION — Autonomous Intelligent Operations Node"
requires-python = ">=3.10"

[project.scripts]
aion = "aion_launcher:main"

[tool.setuptools]
py-modules = ["aion_launcher"]
