[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "1.4.0"
description = "AION — Autonomous Intelligent Operations Node"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/xynstr/aion"

[project.scripts]
aion = "aion_launcher:main"

[tool.setuptools]
py-modules = [
    "aion_launcher",
    "aion",
    "aion_web",
    "aion_cli",
    "plugin_loader",
    "config_store",
    "onboarding",
]
